[gd_scene load_steps=4 format=3 uid="uid://gfmuei1j6fi4"]

[ext_resource type="Script" path="res://Scripts/inicial.gd" id="1_8r5xp"]
[ext_resource type="Texture2D" uid="uid://f87qigbiwno5" path="res://Assets/he_ra_nome.png" id="2_vyplo"]

[sub_resource type="ViewportTexture" id="ViewportTexture_sj87r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8r5xp")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
alignment = 1

[node name="HeRaNome" type="Sprite2D" parent="HBoxContainer2"]
visible = false
position = Vector2(569, 385)
scale = Vector2(0.8625, 0.68)
texture = ExtResource("2_vyplo")
region_filter_clip_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer2"]
position = Vector2(576, 324)
scale = Vector2(0.72, 0.54)
texture = ExtResource("2_vyplo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.933
anchor_bottom = 0.933
offset_top = -26.584
offset_right = 281.0
offset_bottom = 26.416
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
text = "Produzido por:"

[node name="Criadores" type="Button" parent="HBoxContainer"]
modulate = Color(0.364706, 0.827451, 0, 1)
clip_contents = true
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
auto_translate = false
localize_numeral_system = false
focus_mode = 0
text = "Junior e Danilo"
icon = SubResource("ViewportTexture_sj87r")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.33
anchor_right = 0.51
anchor_bottom = 0.33
offset_left = -109.52
offset_top = 0.159988
offset_right = 108.48
offset_bottom = 101.16

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="easteregg1" type="Button" parent="."]
layout_mode = 2
offset_right = 206.0
offset_bottom = 65.0
flat = true

[node name="easteregg2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.892
anchor_right = 0.51
anchor_bottom = 0.892
offset_left = -109.52
offset_top = -0.0159912
offset_right = 108.48
offset_bottom = 64.984
flat = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.911
anchor_top = 0.378
anchor_right = 0.911
anchor_bottom = 0.378
offset_left = -103.472
offset_top = 4.05598
offset_right = 102.528
offset_bottom = 69.056
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.717
anchor_right = 0.717
offset_left = -129.984
offset_right = 131.016
offset_bottom = 91.0
flat = true

[connection signal="pressed" from="HBoxContainer/Criadores" to="." method="_on_criadores_pressed"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="easteregg1" to="." method="_on_easteregg_1_pressed"]
[connection signal="pressed" from="easteregg2" to="." method="_on_easteregg_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
